Header done. Add images/

--- a/index.html
+++ b/index.html
@@ -15,9 +15,46 @@
     <header class="header">
         <div class="conteiner">
             <div class="row">
-                <div class="col-3">Logo</div>
-                <div class="col-6">Menu</div>
-                <div class="col-3">Search</div>
+                <div class="col-3">
+                    <div class="logo">
+                        <a href="">
+                            <img src="images/logo.png" alt="">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="menu">
+                        <ul>
+                            <li><a href="">Home</a></li>
+                            <li><a href="">Product</a>
+                                <span class="key"></span><ul class="dropdown-content">
+                                <li><a href="">Lorem ipsum dolor</a></li>
+                                <li><a href="">Lorem</a></li>
+                                <li><a href="">Lorem ipsum</a></li>
+                                <li><a href="">Lorem ipsum</a></li>
+                                <li><a href="">Lorem ipsum dolor</a></li>
+                                <li><a href="">Lorem dolor sit amet</a></li>
+                                <li><a href="">Lorem ipsum</a></li>
+                            </ul></li>
+                            <li><a href="">Payment</a></li>
+                            <li><a href="">Shipping</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="col-9">
+                        <form action="" method="get">
+                            <input type="search" placeholder="Search">
+                            <button></button>
+                        </form>
+                    </div>
+                    <div class="col-3 cart-box">
+                        <div class="cart">
+                            <img src="images/cart.png" alt="">
+                            <div class="cart-number"><p>4</p></div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </header>
