--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
     <header class="header">
+
         <div class="conteiner">
             <div class="row">
                 <div class="col-3">
@@ -27,15 +28,17 @@
                         <ul>
                             <li><a href="">Home</a></li>
                             <li><a href="">Product</a>
-                                <span class="key"></span><ul class="dropdown-content">
-                                <li><a href="">Lorem ipsum dolor</a></li>
-                                <li><a href="">Lorem</a></li>
-                                <li><a href="">Lorem ipsum</a></li>
-                                <li><a href="">Lorem ipsum</a></li>
-                                <li><a href="">Lorem ipsum dolor</a></li>
-                                <li><a href="">Lorem dolor sit amet</a></li>
-                                <li><a href="">Lorem ipsum</a></li>
-                            </ul></li>
+                                <span class="key"></span>
+                                <ul class="dropdown-content">
+                                    <li><a href="">Lorem ipsum dolor</a></li>
+                                    <li><a href="">Lorem</a></li>
+                                    <li><a href="">Lorem ipsum</a></li>
+                                    <li><a href="">Lorem ipsum</a></li>
+                                    <li><a href="">Lorem ipsum dolor</a></li>
+                                    <li><a href="">Lorem dolor sit amet</a></li>
+                                    <li><a href="">Lorem ipsum</a></li>
+                                </ul>
+                            </li>
                             <li><a href="">Payment</a></li>
                             <li><a href="">Shipping</a></li>
                         </ul>
@@ -45,20 +48,289 @@
                     <div class="col-9">
                         <form action="" method="get">
                             <input type="search" placeholder="Search">
-                            <button></button>
+                            <button class="loupe"></button>
                         </form>
                     </div>
                     <div class="col-3 cart-box">
                         <div class="cart">
                             <img src="images/cart.png" alt="">
-                            <div class="cart-number"><p>4</p></div>
+                            <div class="cart-number">
+                                <p>4</p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </header>
-    <main class="main">Main</main>
+    <main class="main">
+        <div class="conteiner">
+            <div class="row">
+                <div class="col-12">
+                    <div class="slider">
+                        Slider
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="filter">
+                        Filter
+                    </div>
+                </div>
+                <div class="col-9">
+                    <div class="bread-crumbs">
+                        <ul class="breadcrumbs">
+                            <li><a href="#">Home page</a></li>
+                            <li><a href="#">Products</a></li>
+                            <li><a href="#"><span>Laptops and Tablets</span></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="product-title">
+                        <h1>Laptops and Tablets</h1>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="sorting">
+                        <ul>
+                            <li>
+                                <a href="">sort by price</a>
+                                <span class="key-2"></span>
+                                <ul class="dropdown-content-2">
+                                    <li><a href="">sort by name</a></li>
+                                    <li><a href="">sort by date</a></li>
+                                    <li><a href="">sort by popularity</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-9">
+                    <div class="col-4">
+                        <div class="product">
+                            <div class="product-face">
+                                <img src="images/monoblock.png" alt="">
+                                <div class="heart"></div>
+                                <div class="cube"></div>
+                            </div>
+                            <div class="product-name">#1 Device Name</div>
+                            <div class="about">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                            <div class="type"><span>Type:</span> Laptop</div>
+                            <div class="screen-size"><span>Screen size:</span> 7 inches</div>
+                            <div class="ram"><span>RAM:</span> 1GB</div>
+                            <div class="price">
+                                <div>&#36;599</div>
+                                <div class="cent">25</div>
+                            </div>
+                            <div class="more"><button>more details</button></div>
+                            <div class="add-cart"><button>add cart</button>
+                                <div class="cart1"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="product">
+                            <div class="product-face">
+                                <img src="images/pc.png" alt="">
+                                <div class="heart"></div>
+                                <div class="cube"></div>
+                            </div>
+                            <div class="product-name">#1 Device Name</div>
+                            <div class="about">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                            <div class="type"><span>Type:</span> Laptop</div>
+                            <div class="screen-size"><span>Screen size:</span> 7 inches</div>
+                            <div class="ram"><span>RAM:</span> 1GB</div>
+                            <div class="price">
+                                <div>&#36;599</div>
+                                <div class="cent">25</div>
+                            </div>
+                            <div class="more"><button>more details</button></div>
+                            <div class="add-cart"><button>add cart</button>
+                                <div class="cart1"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="product last">
+                            <div class="product-face">
+                                <img src="images/watch.png" alt="">
+                                <div class="heart"></div>
+                                <div class="cube"></div>
+                            </div>
+                            <div class="product-name">#1 Device Name</div>
+                            <div class="about">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                            <div class="type"><span>Type:</span> Laptop</div>
+                            <div class="screen-size"><span>Screen size:</span> 7 inches</div>
+                            <div class="ram"><span>RAM:</span> 1GB</div>
+                            <div class="price">
+                                <div>&#36;599</div>
+                                <div class="cent">25</div>
+                            </div>
+                            <div class="more"><button>more details</button></div>
+                            <div class="add-cart"><button>add cart</button>
+                                <div class="cart1"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="product">
+                            <div class="product-face">
+                                <img src="images/nbook.png" alt="">
+                                <div class="heart"></div>
+                                <div class="cube"></div>
+                            </div>
+                            <div class="product-name">#1 Device Name</div>
+                            <div class="about">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                            <div class="type"><span>Type:</span> Laptop</div>
+                            <div class="screen-size"><span>Screen size:</span> 7 inches</div>
+                            <div class="ram"><span>RAM:</span> 1GB</div>
+                            <div class="price">
+                                <div>&#36;599</div>
+                                <div class="cent">25</div>
+                            </div>
+                            <div class="more"><button>more details</button></div>
+                            <div class="add-cart"><button>add cart</button>
+                                <div class="cart1"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="product">
+                            <div class="product-face">
+                                <img src="images/player.png" alt="">
+                                <div class="heart"></div>
+                                <div class="cube"></div>
+                            </div>
+                            <div class="product-name">#1 Device Name</div>
+                            <div class="about">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                            <div class="type"><span>Type:</span> Laptop</div>
+                            <div class="screen-size"><span>Screen size:</span> 7 inches</div>
+                            <div class="ram"><span>RAM:</span> 1GB</div>
+                            <div class="price">
+                                <div>&#36;599</div>
+                                <div class="cent">25</div>
+                            </div>
+                            <div class="more"><button>more details</button></div>
+                            <div class="add-cart"><button>add cart</button>
+                                <div class="cart1"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="product last">
+                            <div class="product-face">
+                                <img src="images/phone.png" alt="">
+                                <div class="heart"></div>
+                                <div class="cube"></div>
+                            </div>
+                            <div class="product-name">#1 Device Name</div>
+                            <div class="about">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                            <div class="type"><span>Type:</span> Laptop</div>
+                            <div class="screen-size"><span>Screen size:</span> 7 inches</div>
+                            <div class="ram"><span>RAM:</span> 1GB</div>
+                            <div class="price">
+                                <div>&#36;599</div>
+                                <div class="cent">25</div>
+                            </div>
+                            <div class="more"><button>more details</button></div>
+                            <div class="add-cart"><button>add cart</button>
+                                <div class="cart1"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="product">
+                            <div class="product-face">
+                                <img src="images/laptop.png" alt="">
+                                <div class="heart"></div>
+                                <div class="cube"></div>
+                            </div>
+                            <div class="product-name">#1 Device Name</div>
+                            <div class="about">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                            <div class="type"><span>Type:</span> Laptop</div>
+                            <div class="screen-size"><span>Screen size:</span> 7 inches</div>
+                            <div class="ram"><span>RAM:</span> 1GB</div>
+                            <div class="price">
+                                <div>&#36;599</div>
+                                <div class="cent">25</div>
+                            </div>
+                            <div class="more"><button>more details</button></div>
+                            <div class="add-cart"><button>add cart</button>
+                                <div class="cart1"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="product">
+                            <div class="product-face">
+                                <img src="images/pc.png" alt="">
+                                <div class="heart"></div>
+                                <div class="cube"></div>
+                            </div>
+                            <div class="product-name">#1 Device Name</div>
+                            <div class="about">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                            <div class="type"><span>Type:</span> Laptop</div>
+                            <div class="screen-size"><span>Screen size:</span> 7 inches</div>
+                            <div class="ram"><span>RAM:</span> 1GB</div>
+                            <div class="price">
+                                <div>&#36;599</div>
+                                <div class="cent">25</div>
+                            </div>
+                            <div class="more"><button>more details</button></div>
+                            <div class="add-cart"><button>add cart</button>
+                                <div class="cart1"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="product last">
+                            <div class="product-face">
+                                <img src="images/watch.png" alt="">
+                                <div class="heart"></div>
+                                <div class="cube"></div>
+                            </div>
+                            <div class="product-name">#1 Device Name</div>
+                            <div class="about">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                            <div class="type"><span>Type:</span> Laptop</div>
+                            <div class="screen-size"><span>Screen size:</span> 7 inches</div>
+                            <div class="ram"><span>RAM:</span> 1GB</div>
+                            <div class="price">
+                                <div>&#36;599</div>
+                                <div class="cent">25</div>
+                            </div>
+                            <div class="more"><button>more details</button></div>
+                            <div class="add-cart"><button>add cart</button>
+                                <div class="cart1"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="load-more"><h2>Load more...</h2></div>
+                </div>
+            </div>
+        </div>
+        </div>
+        </div>
+        </div>
+
+    </main>
     <footer class="footer">Footer</footer>
 </body>
 
