--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="col-6">
                     <div class="menu">
                         <ul>
-                            <li><a href="">Home</a></li>
+                            <li><a href="">Home 1</a></li>
                             <li><a href="">Product</a>
                                 <span class="key"></span>
                                 <ul class="dropdown-content">
