add Product name

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <div class="menu">
                         <ul>
                             <li><a href="">Home 1</a></li>
-                            <li><a href="">Product</a>
+                            <li><a href="">Product 2</a>
                                 <span class="key"></span>
                                 <ul class="dropdown-content">
                                     <li><a href="">Lorem ipsum dolor</a></li>
