--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                 <div class="col-6">
                     <div class="menu">
                         <ul>
-                            <li><a href="">Home 1</a></li>
-                            <li><a href="">Product 2</a>
+                            <li><a href="">Home</a></li>
+                            <li><a href="">Product</a>
                                 <span class="key"></span>
                                 <ul class="dropdown-content">
                                     <li><a href="">Lorem ipsum dolor</a></li>
@@ -39,8 +39,8 @@
                                     <li><a href="">Lorem ipsum</a></li>
                                 </ul>
                             </li>
-                            <li><a href="">Payment 3</a></li>
-                            <li><a href="">Shipping 4</a></li>
+                            <li><a href="">Payment</a></li>
+                            <li><a href="">Shipping</a></li>
                         </ul>
                     </div>
                 </div>
