--- a/index.html
+++ b/index.html
@@ -82,19 +82,23 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-8 product-name">Laptops and Tablets</div>
-						<div class="col-4 sort">
-							<ul>
-								<li>
-									<a href="">sort by price</a>
-									<span class="key-2"></span>
-									<ul class="dropdown-content-sort">
-										<li><a href="">sort by name</a></li>
-										<li><a href="">sort by date</a></li>
-										<li><a href="">sort by popularity</a></li>
-									</ul>
-								</li>
-							</ul>
+						<div class="col-8">
+							<div class="product-name">Laptops and Tablets</div>
+						</div>
+						<div class="col-4">
+							<div class=" sort">
+								<ul>
+									<li>
+										<a href="">sort by price</a>
+										<span class="key-2"></span>
+										<ul class="dropdown-content-sort">
+											<li><a href="">sort by name</a></li>
+											<li><a href="">sort by date</a></li>
+											<li><a href="">sort by popularity</a></li>
+										</ul>
+									</li>
+								</ul>
+							</div>
 						</div>
 					</div>
 					<div class="row w">
@@ -121,7 +125,7 @@
 									</div>
 									<div class="price">&#36;599<sup>25</sup></div>
 									<button class="btn">More details</button>
-									<button class="btn btn-add-to-cart">Add to cart<span></span></button>
+									<button class="btn btn-add-to-cart">Add to cart</button>
 								</div>
 							</div>
 						</div>
@@ -348,330 +352,8 @@
 		<div class="load-more">
 			<a href="">Load more...</a>
 		</div>
-
-<<<<<<< HEAD
 	</main>
 	<footer class="footer">Footer</footer>
-=======
-        <div class="conteiner">
-            <div class="row">
-                <div class="col-3">
-                    <div class="logo">
-                        <a href="">
-                            <img src="images/logo.png" alt="">
-                        </a>
-                    </div>
-                </div>
-                <div class="col-6">
-                    <div class="menu">
-                        <ul>
-                            <li><a href="">Home</a></li>
-                            <li><a href="">Product</a>
-                                <span class="key"></span>
-                                <ul class="dropdown-content">
-                                    <li><a href="">Lorem ipsum dolor</a></li>
-                                    <li><a href="">Lorem</a></li>
-                                    <li><a href="">Lorem ipsum</a></li>
-                                    <li><a href="">Lorem ipsum</a></li>
-                                    <li><a href="">Lorem ipsum dolor</a></li>
-                                    <li><a href="">Lorem dolor sit amet</a></li>
-                                    <li><a href="">Lorem ipsum</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="">Payment</a></li>
-                            <li><a href="">Shipping</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-3">
-                    <div class="col-9">
-                        <form action="" method="get">
-                            <input type="search" placeholder="Search">
-                            <button class="loupe"></button>
-                        </form>
-                    </div>
-                    <div class="col-3 cart-box">
-                        <div class="cart">
-                            <img src="images/cart.png" alt="">
-                            <div class="cart-number">
-                                <p>4</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
-    <main class="main">
-        <div class="conteiner">
-            <div class="row">
-                <div class="col-12">
-                    <div class="slider">
-                        Slider
-                    </div>
-                </div>
-                <div class="col-3">
-                    <div class="filter">
-                        Filter
-                    </div>
-                </div>
-                <div class="col-9">
-                    <div class="bread-crumbs">
-                        <ul class="breadcrumbs">
-                            <li><a href="#">Home page</a></li>
-                            <li><a href="#">Products</a></li>
-                            <li><a href="#"><span>Laptops and Tablets</span></a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-6">
-                    <div class="product-title">
-                        <h1>Laptops and Tablets</h1>
-                    </div>
-                </div>
-                <div class="col-3">
-                    <div class="sorting">
-                        <ul>
-                            <li>
-                                <a href="">sort by price</a>
-                                <span class="key-2"></span>
-                                <ul class="dropdown-content-2">
-                                    <li><a href="">sort by name</a></li>
-                                    <li><a href="">sort by date</a></li>
-                                    <li><a href="">sort by popularity</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-9">
-                    <div class="col-4">
-                        <div class="product">
-                            <div class="product-face">
-                                <img src="images/monoblock.png" alt="">
-                                <div class="heart"></div>
-                                <div class="cube"></div>
-                            </div>
-                            <div class="product-name">#1 Device Name</div>
-                            <div class="about">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                            </div>
-                            <div class="type"><span>Type:</span> Laptop</div>
-                            <div class="screen-size"><span>Screen size:</span> 7 inches</div>
-                            <div class="ram"><span>RAM:</span> 1GB</div>
-                            <div class="price">
-                                <div>&#36;599</div>
-                                <div class="cent">25</div>
-                            </div>
-                            <div class="more"><button>more details</button></div>
-                            <div class="add-cart"><button>add cart</button>
-                                <div class="cart1"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-4">
-                        <div class="product">
-                            <div class="product-face">
-                                <img src="images/pc.png" alt="">
-                                <div class="heart"></div>
-                                <div class="cube"></div>
-                            </div>
-                            <div class="product-name">#1 Device Name</div>
-                            <div class="about">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                            </div>
-                            <div class="type"><span>Type:</span> Laptop</div>
-                            <div class="screen-size"><span>Screen size:</span> 7 inches</div>
-                            <div class="ram"><span>RAM:</span> 1GB</div>
-                            <div class="price">
-                                <div>&#36;599</div>
-                                <div class="cent">25</div>
-                            </div>
-                            <div class="more"><button>more details</button></div>
-                            <div class="add-cart"><button>add cart</button>
-                                <div class="cart1"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-4">
-                        <div class="product last">
-                            <div class="product-face">
-                                <img src="images/watch.png" alt="">
-                                <div class="heart"></div>
-                                <div class="cube"></div>
-                            </div>
-                            <div class="product-name">#1 Device Name</div>
-                            <div class="about">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                            </div>
-                            <div class="type"><span>Type:</span> Laptop</div>
-                            <div class="screen-size"><span>Screen size:</span> 7 inches</div>
-                            <div class="ram"><span>RAM:</span> 1GB</div>
-                            <div class="price">
-                                <div>&#36;599</div>
-                                <div class="cent">25</div>
-                            </div>
-                            <div class="more"><button>more details</button></div>
-                            <div class="add-cart"><button>add cart</button>
-                                <div class="cart1"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-4">
-                        <div class="product">
-                            <div class="product-face">
-                                <img src="images/nbook.png" alt="">
-                                <div class="heart"></div>
-                                <div class="cube"></div>
-                            </div>
-                            <div class="product-name">#1 Device Name</div>
-                            <div class="about">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                            </div>
-                            <div class="type"><span>Type:</span> Laptop</div>
-                            <div class="screen-size"><span>Screen size:</span> 7 inches</div>
-                            <div class="ram"><span>RAM:</span> 1GB</div>
-                            <div class="price">
-                                <div>&#36;599</div>
-                                <div class="cent">25</div>
-                            </div>
-                            <div class="more"><button>more details</button></div>
-                            <div class="add-cart"><button>add cart</button>
-                                <div class="cart1"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-4">
-                        <div class="product">
-                            <div class="product-face">
-                                <img src="images/player.png" alt="">
-                                <div class="heart"></div>
-                                <div class="cube"></div>
-                            </div>
-                            <div class="product-name">#1 Device Name</div>
-                            <div class="about">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                            </div>
-                            <div class="type"><span>Type:</span> Laptop</div>
-                            <div class="screen-size"><span>Screen size:</span> 7 inches</div>
-                            <div class="ram"><span>RAM:</span> 1GB</div>
-                            <div class="price">
-                                <div>&#36;599</div>
-                                <div class="cent">25</div>
-                            </div>
-                            <div class="more"><button>more details</button></div>
-                            <div class="add-cart"><button>add cart</button>
-                                <div class="cart1"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-4">
-                        <div class="product last">
-                            <div class="product-face">
-                                <img src="images/phone.png" alt="">
-                                <div class="heart"></div>
-                                <div class="cube"></div>
-                            </div>
-                            <div class="product-name">#1 Device Name</div>
-                            <div class="about">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                            </div>
-                            <div class="type"><span>Type:</span> Laptop</div>
-                            <div class="screen-size"><span>Screen size:</span> 7 inches</div>
-                            <div class="ram"><span>RAM:</span> 1GB</div>
-                            <div class="price">
-                                <div>&#36;599</div>
-                                <div class="cent">25</div>
-                            </div>
-                            <div class="more"><button>more details</button></div>
-                            <div class="add-cart"><button>add cart</button>
-                                <div class="cart1"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-4">
-                        <div class="product">
-                            <div class="product-face">
-                                <img src="images/laptop.png" alt="">
-                                <div class="heart"></div>
-                                <div class="cube"></div>
-                            </div>
-                            <div class="product-name">#1 Device Name</div>
-                            <div class="about">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                            </div>
-                            <div class="type"><span>Type:</span> Laptop</div>
-                            <div class="screen-size"><span>Screen size:</span> 7 inches</div>
-                            <div class="ram"><span>RAM:</span> 1GB</div>
-                            <div class="price">
-                                <div>&#36;599</div>
-                                <div class="cent">25</div>
-                            </div>
-                            <div class="more"><button>more details</button></div>
-                            <div class="add-cart"><button>add cart</button>
-                                <div class="cart1"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-4">
-                        <div class="product">
-                            <div class="product-face">
-                                <img src="images/pc.png" alt="">
-                                <div class="heart"></div>
-                                <div class="cube"></div>
-                            </div>
-                            <div class="product-name">#1 Device Name</div>
-                            <div class="about">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                            </div>
-                            <div class="type"><span>Type:</span> Laptop</div>
-                            <div class="screen-size"><span>Screen size:</span> 7 inches</div>
-                            <div class="ram"><span>RAM:</span> 1GB</div>
-                            <div class="price">
-                                <div>&#36;599</div>
-                                <div class="cent">25</div>
-                            </div>
-                            <div class="more"><button>more details</button></div>
-                            <div class="add-cart"><button>add cart</button>
-                                <div class="cart1"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-4">
-                        <div class="product last">
-                            <div class="product-face">
-                                <img src="images/watch.png" alt="">
-                                <div class="heart"></div>
-                                <div class="cube"></div>
-                            </div>
-                            <div class="product-name">#1 Device Name</div>
-                            <div class="about">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                            </div>
-                            <div class="type"><span>Type:</span> Laptop</div>
-                            <div class="screen-size"><span>Screen size:</span> 7 inches</div>
-                            <div class="ram"><span>RAM:</span> 1GB</div>
-                            <div class="price">
-                                <div>&#36;599</div>
-                                <div class="cent">25</div>
-                            </div>
-                            <div class="more"><button>more details</button></div>
-                            <div class="add-cart"><button>add cart</button>
-                                <div class="cart1"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="load-more"><h2>Load more...</h2></div>
-                </div>
-            </div>
-        </div>
-        </div>
-        </div>
-        </div>
-
-    </main>
-    <footer class="footer">Footer</footer>
->>>>>>> cd096df254a0f04ecd4054bcd0ecec8aef31b0e7
 </body>
 
 </html>
