--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 									</div>
 									<div class="price">&#36;599<sup>25</sup></div>
 									<button class="btn">More details</button>
-									<button class="btn btn-add-to-cart">Add to cart</button>
+									<button class="btn btn-add-to-cart">Add to cart<div></div></button>
 								</div>
 							</div>
 						</div>
@@ -152,7 +152,7 @@
 									</div>
 									<div class="price">&#36;1250<sup>99</sup></div>
 									<button class="btn">More details</button>
-									<button class="btn btn-add-to-cart">Add to cart<span></span></button>
+									<button class="btn btn-add-to-cart">Add to cart<div></div><span></span></button>
 								</div>
 							</div>
 						</div>
@@ -179,7 +179,7 @@
 									</div>
 									<div class="price">&#36;399<sup>50</sup></div>
 									<button class="btn">More details</button>
-									<button class="btn btn-add-to-cart">Add to cart<span></span></button>
+									<button class="btn btn-add-to-cart">Add to cart<div></div><span></span></button>
 								</div>
 							</div>
 						</div>
@@ -206,7 +206,7 @@
 									</div>
 									<div class="price">&#36;599<sup>25</sup></div>
 									<button class="btn">More details</button>
-									<button class="btn btn-add-to-cart">Add to cart<span></span></button>
+									<button class="btn btn-add-to-cart">Add to cart<div></div><span></span></button>
 								</div>
 							</div>
 						</div>
@@ -233,7 +233,7 @@
 									</div>
 									<div class="price">&#36;1250<sup>99</sup></div>
 									<button class="btn">More details</button>
-									<button class="btn btn-add-to-cart">Add to cart<span></span></button>
+									<button class="btn btn-add-to-cart">Add to cart<div></div><span></span></button>
 								</div>
 							</div>
 						</div>
@@ -260,7 +260,7 @@
 									</div>
 									<div class="price">&#36;399<sup>50</sup></div>
 									<button class="btn">More details</button>
-									<button class="btn btn-add-to-cart">Add to cart<span></span></button>
+									<button class="btn btn-add-to-cart">Add to cart<div></div><span></span></button>
 								</div>
 							</div>
 						</div>
@@ -287,7 +287,7 @@
 									</div>
 									<div class="price">&#36;599<sup>25</sup></div>
 									<button class="btn">More details</button>
-									<button class="btn btn-add-to-cart">Add to cart<span></span></button>
+									<button class="btn btn-add-to-cart">Add to cart<div></div><span></span></button>
 								</div>
 							</div>
 						</div>
@@ -314,7 +314,7 @@
 									</div>
 									<div class="price">&#36;1250<sup>99</sup></div>
 									<button class="btn">More details</button>
-									<button class="btn btn-add-to-cart">Add to cart<span></span></button>
+									<button class="btn btn-add-to-cart">Add to cart<div></div><span></span></button>
 								</div>
 							</div>
 						</div>
@@ -341,7 +341,7 @@
 									</div>
 									<div class="price">&#36;399<sup>50</sup></div>
 									<button class="btn">More details</button>
-									<button class="btn btn-add-to-cart">Add to cart<span></span></button>
+									<button class="btn btn-add-to-cart">Add to cart<div></div><span></span></button>
 								</div>
 							</div>
 						</div>
