--- a/index.html
+++ b/index.html
@@ -68,7 +68,83 @@
 				Slider
 			</div>
 			<div class="row">
-				<div class="col-3">Filter</div>
+				<div class="col-3">
+					<div class="filter">
+						<div class="filter-category">
+							<div class="filter-title">Device Type</div>
+							<div class="check">
+								<input type="checkbox" id="filter-checkbx-laptop">
+								<label for="filter-checkbx-laptop"></label>
+								Laptop
+							</div>
+							<div class="check">
+								<input type="checkbox" id="filter-checkbx-tablet">
+								<label for="filter-checkbx-tablet"></label>
+								Tablet
+							</div>
+						</div>
+						<div class="filter-category">
+							<div class="filter-title">Color</div>
+							<div class="check">
+								<input type="checkbox" id="filter-checkbx-black">
+								<label for="filter-checkbx-black"></label>
+								Black
+							</div>
+							<div class="check">
+								<input type="checkbox" id="filter-checkbx-red">
+								<label for="filter-checkbx-red"></label>
+								Red
+							</div>
+							<div class="check">
+								<input type="checkbox" id="filter-checkbx-green">
+								<label for="filter-checkbx-green"></label>
+								Green
+							</div>
+							<div class="check">
+								<input type="checkbox" id="filter-checkbx-blue">
+								<label for="filter-checkbx-blue"></label>
+								Blue
+							</div>
+							<div class="check">
+								<input type="checkbox" id="filter-checkbx-orange">
+								<label for="filter-checkbx-orange"></label>
+								Orange
+							</div>
+						</div>
+						<div class="filter-category">
+							<div class="filter-title">RAM</div>
+							<div class="check">
+								<input type="checkbox" id="filter-checkbx-1gb">
+								<label for="filter-checkbx-1gb"></label>
+								1GB
+							</div>
+							<div class="check">
+								<input type="checkbox" id="filter-checkbx-2gb">
+								<label for="filter-checkbx-2gb"></label>
+								2GB
+							</div>
+							<div class="check">
+								<input type="checkbox" id="filter-checkbx-4gb">
+								<label for="filter-checkbx-4gb"></label>
+								4GB
+							</div>
+							<div class="check">
+								<input type="checkbox" id="filter-checkbx-6gb">
+								<label for="filter-checkbx-6gb"></label>
+								6GB
+							</div>
+							<div class="check">
+								<input type="checkbox" id="filter-checkbx-8gb">
+								<label for="filter-checkbx-8gb"></label>
+								8GB
+							</div>
+							<div class="more-options">
+								<a href="">Show more options...</a>
+							</div>
+							<button class="btn">Submit</button>
+						</div>
+					</div>
+				</div>
 				<div class="col-9">
 					<div class="row">
 						<div class="col-12">
